
  [ Daniel Holbach ]
  * Added some additional information to the autopkgtest article.

  [ Andrew Starr-Bochicchio ]
  * debian/scripts/add-languages:
   - Modify LANGS variable in Makefile when a language reaches
     threshold (LP: #1067288).
   - Clean up to make PEP8 compliant.
  
  [ Dmitry Shachnev ]
  * Fix search not working (LP: #814679).
  * Add CSS styling for code blocks and search results page.
  * Link JS files with the libjs-sphinxdoc package.
  * Do not install websupport.js
  * Fixed a typo in fixing-a-bug-example.rst.
  * Simplified the syntax in python-packaging.rst.

 -- Daniel Holbach <daniel.holbach@ubuntu.com>  Fri, 12 Oct 2012 16:52:11 +0200

ubuntu-packaging-guide (0.2.4) unstable; urgency=low

  [ Dmitry Shachnev ]
  * Make sure that packages built with example debian/rules from
    our "Python packaging" article get a correct shebang, thanks Colin
    Watson (LP: #1047457)
  * Add missing CSS bits for headers and admonitions (LP: #1045386)

  [ Daniel Holbach ]
  * Added article about using autopkgtest. 

 -- Benjamin Drung <bdrung@debian.org>  Wed, 10 Oct 2012 14:35:31 +0200

ubuntu-packaging-guide (0.2.3) unstable; urgency=low

  [ Thomas Kluyver ]
  * Improve English in Python packaging page.

  [ Don Kirkby ]
  * fix a number of typos.

  [ Daniel Holbach ]
  * workaround for bug 1043232, disable LANGS, so the build for Japanese
    PDFs is not attempted.
  * Fix add-languages-script as the deb822 API seems to have changed. Also
    print out some statistics about translations and if they are considered
    ready for addition or not.
  * Add a tutorial with a specific example of how to fix a bug. (LP: #1045396)

 -- Benjamin Drung <bdrung@debian.org>  Thu, 06 Sep 2012 13:20:35 +0200

ubuntu-packaging-guide (0.2.2) quantal; urgency=low

  * Added COPYING.GPL3 text, fixed a mistake in debian/copyright. Thanks Séb.

 -- Daniel Holbach <daniel.holbach@ubuntu.com>  Wed, 22 Aug 2012 12:38:13 +0200
