@@ -1,0 +1,2 @@
+_build/html/_images usr/share/ubuntu-packaging-guide/
+_build/html/_static usr/share/ubuntu-packaging-guide/
